--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 body{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     min-height: 500px;
     min-width: 500px;
