--- a/index.css
+++ b/index.css
@@ -43,9 +43,9 @@ body{
 #reset{
     margin:0.1rem;
     padding:0.5rem;
-    border: 2px dashed black;
+    border: 2px solid black;
     border-radius: 0.5rem;
-    background-color: #333;
+    background-color: #4d4d4d;
     color: aliceblue;
     font-weight: bold;
     min-width:100px;    
