--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@
 #reset{
     margin:1rem;
     padding:0.5rem;
-    border: 2px dashed black;
+    border: 2px double black;
     border-radius: 0.5rem;
     background-color: #333;
     color: aliceblue;
@@ -62,4 +62,5 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
 }
